Switch FTP resource to FluentFTP

--- a/FtpMcpServer/FtpMcpServer.csproj
+++ b/FtpMcpServer/FtpMcpServer.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="ModelContextProtocol" Version="0.4.0-preview.2" />
     <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.4.0-preview.2" />
     <PackageReference Include="ModelContextProtocol.Core" Version="0.4.0-preview.2" />
+    <PackageReference Include="FluentFTP" Version="53.0.2" />
   </ItemGroup>
 
 </Project>
