--- a/FtpMcpServer/FtpMcpServer.csproj
+++ b/FtpMcpServer/FtpMcpServer.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.4.0-preview.2" />
     <PackageReference Include="ModelContextProtocol.Core" Version="0.4.0-preview.2" />
     <PackageReference Include="FluentFTP" Version="53.0.2" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.10" />
+    <PackageReference Include="UTF.Unknown" Version="2.6.0" />
   </ItemGroup>
 
 </Project>
